Refactor: Use Path instead of URL for as long as possible